# timeReg

./: .gitignore  pyproject.toml
timetracking/: manage.py
timetracking/timemoney/: asgi.py  settings.py  urls.py  views.py  wsgi.py
timetracking/timemoneystore/: admin.py  apps.py  models.py  views.py
