[tool.poetry]
name = "timetracking"
version = "0.1.0"
description = ""
authors = ["vicjan89 <vicjan89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
mpld3 = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
